Impose OpenGL but still not working
Signed-off-by: Patrick Hodoul <Patrick.Hodoul@autodesk.com>

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -126,6 +126,8 @@ elseif(WIN32)
     file(COPY ${lib_files} DESTINATION "${PROJECT_BINARY_DIR}")
     file(GLOB bin_files "${pxr_DIR}/bin/*.dll")
     file(COPY ${bin_files} DESTINATION "${PROJECT_BINARY_DIR}")
+    file(GLOB plugin_files "${pxr_DIR}/plugin/*")
+    file(COPY ${plugin_files} DESTINATION "${PROJECT_BINARY_DIR}")
 else()
     message(FATAL_ERROR "Platform not supported")
 endif()
