Add glew support
Signed-off-by: Patrick Hodoul <patrick.hodoul@autodesk.com>

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -49,6 +49,27 @@ get_googletest()
 
 #------------
 
+function(get_glew)
+    FetchContent_Declare(
+        glew
+        GIT_REPOSITORY https://git.autodesk.com/autodesk-forks/glew-cmake
+        GIT_TAG 79985c4
+    )
+
+    if(CMAKE_CXX_COMPILER_ID MATCHES "[C|c]lang" OR CMAKE_CXX_COMPILER_ID MATCHES "GNU")
+        # FIXME It applies to all the following projects i.e., these settings are not encapsulated.
+        add_compile_options(-Wno-strict-prototypes)
+    endif()
+
+    set(glew-cmake_BUILD_SHARED OFF CACHE BOOL "" FORCE)
+    set(glew-cmake_BUILD_STATIC ON CACHE BOOL "" FORCE)
+    FetchContent_MakeAvailable(glew)
+endfunction()
+
+get_glew()
+
+#------------
+
 function(get_glfw)
     FetchContent_Declare(
         glfw
@@ -82,6 +103,8 @@ endif()
 
 #------------
 
+
+
 # Find OpenUSD, and populate variables needed for building (e.g. PXR_INCLUDE_DIRS) and library names
 # (e.g. hdx, usdImaging) that can be used for linking.
 # NOTE: The special variable <package>_DIR is used by find_package(), so in this case we must
@@ -110,6 +133,7 @@ endif()
 enable_testing()
 
 add_executable(${_TARGET}
+    main.cpp
     test1.cpp
     test2.cpp
     test3.cpp
@@ -137,6 +161,8 @@ target_link_libraries(${_TARGET}
     hvt
     hdx
     usdImaging
+    OpenGL::GL
+    libglew_static
     glfw
 )
 
