Add missing usd plugins
Signed-off-by: Patrick Hodoul <Patrick.Hodoul@autodesk.com>

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -149,8 +149,10 @@ elseif(WIN32)
     file(COPY ${lib_files} DESTINATION "${PROJECT_BINARY_DIR}")
     file(GLOB bin_files "${pxr_DIR}/bin/*.dll")
     file(COPY ${bin_files} DESTINATION "${PROJECT_BINARY_DIR}")
-    file(GLOB plugin_files "${pxr_DIR}/plugin/*")
-    file(COPY ${plugin_files} DESTINATION "${PROJECT_BINARY_DIR}")
+    file(GLOB plugin_files "${pxr_DIR}/plugin/usd/*")
+    file(COPY ${plugin_files} DESTINATION "${PROJECT_BINARY_DIR}/usd")
+    file(GLOB plugin_files "${pxr_DIR}/lib/usd/*")
+    file(COPY ${plugin_files} DESTINATION "${PROJECT_BINARY_DIR}/usd")
 else()
     message(FATAL_ERROR "Platform not supported")
 endif()
