--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -28,7 +28,7 @@ project(hvt
 # This section lists all the third-party dependencies.
 
 # Find OpenGL, which is mandatory for OpenUSD on Windows and macOS.
-if (WIN32 OR APPLE)
+if (WIN32 OR (APPLE AND NOT IOS))
     find_package(OpenGL REQUIRED)
     if (NOT OpenGL_FOUND)
         message(FATAL_ERROR "OpenGL was not found.")
