OGSMOD-7043: Fix use of draw order symbol and remove generated namespace file (#43)

--- a/source/engine/CMakeLists.txt
+++ b/source/engine/CMakeLists.txt
@@ -80,8 +80,11 @@ add_library(${_TARGET} OBJECT
 
 # Set the required include directories for the library.
 target_include_directories(${_TARGET}
-    PUBLIC "${_HVT_INCLUDE_DIR}"
-    PRIVATE "${_HVT_SOURCE_DIR}" # Access to private headers.
+    PUBLIC
+        "$<BUILD_INTERFACE:${_HVT_INCLUDE_DIR}>"
+        "$<INSTALL_INTERFACE:include>"
+    PRIVATE
+        "${_HVT_SOURCE_DIR}" # Access to private headers.
 )
 
 # Link to the relevant OpenUSD targets. This will populate include directories, link libraries, etc.
@@ -90,4 +93,12 @@ target_include_directories(${_TARGET}
 # between the OpenUSD targets change in the future.
 target_link_libraries(${_TARGET}
     PUBLIC hdSt usdImaging
+)
+
+# Add the target to the export set for HVT.
+install(TARGETS ${_TARGET}
+    EXPORT ${_EXPORT_NAME}Targets
+    RUNTIME DESTINATION bin
+    LIBRARY DESTINATION lib
+    ARCHIVE DESTINATION lib
 )
