Move enable_testing() to top-level CMakeLists
This ensures proper CTest integration. When enable_testing() is only called
in the test subdirectory, CTest may not discover tests from the top-level build directory.

Also increased the timeout to discover tests as it can fail silently if default 5s is not enough.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -95,8 +95,6 @@ get_glfw()
 
 #---------------------------------------------------------------------------------------------------
 
-enable_testing()
-
 add_executable(${_TARGET}
     main.cpp
     test1.cpp
@@ -161,11 +159,13 @@ target_link_libraries(${_TARGET}
 )
 
 #---------------------------------------------------------------------------------------------------
-
 include(GoogleTest)
 
 # Delay test discovery which has a better chance at finding appropriate runtime dependencies
 # fixing the error of running test executable during the build.
 set(CMAKE_GTEST_DISCOVER_TESTS_DISCOVERY_MODE PRE_TEST)
 
-gtest_discover_tests(${_TARGET})
+gtest_discover_tests(hvt_test
+    DISCOVERY_TIMEOUT 30
+    PROPERTIES WORKING_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}"
+)
