Add vcpkg support for dependency management
This commit introduces vcpkg for managing third-party dependencies in the project.
The goal is to make it easier to manage libraries such as GTest, GLFW, and GLEW.

Using OpenUSD commit 7c32358f
git checkout 7c32358f
git pull
git submodule update --init --recursive
python build_scripts/build_usd.py --generator Ninja --build-variant debug -j 8 --build build_work_debug/build --materialx --bvh --tests --usd-imaging --no-python build_work_debug/install

Steps to build using preset and vcpkg
```bash
git clone https://git.autodesk.com/GFX/hydra-viewport-toolbox.git hvt2
cd hvt2
git checkout laforel/vcpkg
git submodule update --init --recursive
cd vcpkg
./bootstrap-vcpkg.sh
./vcpkg install
cd ..
Modify the CMakePresets.json to define the correct USD location
cmake --preset debug_adsk
cmake --build --preset debug_adsk
ctest --preset debug_adsk --output-on-failure
```

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@ out/
 include/hvt/namespace.h
 CMakeUserPresets.json
 .vs/
+
+# vcpkg local build artifacts
+/vcpkg_installed/
+/CMakeUserPresets.json # optional, to keep it local-only for each dev
